fix(jsdialogs): prevent corner overlap on button
Sometimes we have a nested structure that looks like

div.unotoolbutton > button.unobutton > img[src="https://.../foo.svg"]

The unotoolbutton here has a border radius, but the button does not
which leads to any borders on the unotoolbutton being overlapped by the
coners of the unobutton.

--- a/browser/css/btns.css
+++ b/browser/css/btns.css
@@ -47,6 +47,10 @@
 	color: var(--color-text-darker);
 	border-radius: var(--border-radius);
 	background-color: var(--color-background-tabs-group);
+
+	& > button.unobutton {
+		border-radius: var(--border-radius);
+	}
 }
 
 /* toolbuttons selected */
